# Aetlis

./: CMakeLists.txt  LICENSE  README.md  build_usockets.cmake  build_usockets.ps1  build_usockets.sh  build_usockets_vs.bat  check_dependencies.bat  mazi
Aetlis/: Aetlis.vcxproj
Aetlis/src/: ServerHandle.cpp  ServerHandle.h
Aetlis/src/cells/: Cell.cpp  Cell.h
Aetlis/src/gamemodes/: FFA - Kopya.cpp  FFA.cpp  Gamemode.cpp
Aetlis/src/primitives/: Rect.h
Aetlis/src/protocols/: ProtocolModern.cpp  ProtocolModern2.cpp  ProtocolVanis.cpp  ProtocolVanis.h
Aetlis/src/sockets/: DualMinionRouter.cpp  DualMinionRouter.h  LibuSocketsMock.cpp  Router.h
Aetlis/src/worlds/: Player.cpp  Player.h  World.cpp  World.h
build_usockets/: CMakeCache.txt
include/: us_poll.h
